@@ -67,6 +67,7 @@ Changes in 3.0.0
 Changes in 2.2.1CVS
 
 - Support for MingW builds
+- Bugfix in Polygonizer chocking on invalid LineString inputs
 
 Changes in 2.2.0
 
